--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Välkommen till grupp 12 entprise limited ab</h1>
     <p>Emma testar git, hej alla</p>
     <p>hej</p>
-</body>
+    <p>hej Från Amira</p>
+  </body>
 </html>
