--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,5 +11,6 @@
     <p>Emma testar git, hej alla</p>
     <p>hej</p>
     <p>hej Från Amira</p>
+    <p>Bra då är vi alla här</p>
   </body>
 </html>
