--- a/public_html/Amira.html
+++ b/public_html/Amira.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Special Design</title>
+    <link rel="stylesheet" href="css/master.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-  <body></body>
+  <body>
+    <!-- Start lnding page  -->
+    <div class="landing-page">
+      <div class="overlay"></div>
+      <header class="header-area">
+        <div class="logo">
+          <span>S&D</span> <br />
+          Special Design
+        </div>
+        <ul class="links">
+          <li>Home</li>
+          <li>Service</li>
+          <li>Om oss</li>
+          <li>Contact</li>
+        </ul>
+      </header>
+      <div class="introduction-text">
+        <h1>We are creative grupp</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+          voluptate quos ea possimus.
+        </p>
+      </div>
+    </div>
+    <!-- End lnding page  -->
+
+    <script>
+      src = "js/master.js";
+    </script>
+  </body>
 </html>
