--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -7,6 +7,15 @@
     <title>Grupp 12 Projekt</title>
 </head>
 <body>
-    
+    <div id="content">
+
+        <div class="projektSlider"></div>
+        <div id="projektInfo">
+            <div id="projektText"></div>
+            <div id="projektBild"></div>
+        </div>
+
+
+    </div>
 </body>
 </html>
