--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -11,12 +11,14 @@
     <div id="content">
 
         <div class="projektSlider"></div>
-        <div id="projektInfo">
-            <div id="projektText"></div>
+        <div id="projekt">
+            <div id="projektInfo"></div>
             <div id="projektBild"></div>
         </div>
 
 
     </div>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
+    <script src="js/projekt.js"></script>
 </body>
 </html>
