--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -11,7 +11,7 @@
     <div id="content">
 
         <div class="projektSlider"></div>
-        <div id="projekt"><div>
+        <div class="projekt" id="projekt"><div>
 
 
     </div>
