--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -10,7 +10,10 @@
 <body>
     <div id="content">
 
-        <div class="projektSlider"></div>
+        <div class="projektSlider">
+            <button id="nastaProjekt">Nästa projekt</button>
+
+        </div>
         <div class="projekt" id="projekt"><div>
 
 
