--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -14,10 +14,8 @@
             <button id="nastaProjekt">Nästa projekt</button>
 
         </div>
-        <div class="projekt" id="projekt"><div>
+        <div class="projekt" id="projekt"></div>
 
-
-    </div>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
     <script src="js/projekt.js"></script>
 </body>
