--- a/public_html/MALLpersonligProfilSida.html
+++ b/public_html/MALLpersonligProfilSida.html
@@ -6,92 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namn Namnsson</title>
-
-    <!-- Flytta style till sin egen CSS när klar-->
-    <style>
-        * {
-            box-sizing: border-box;
-            padding: 0;
-            margin: 0;
-        }
-
-        div {
-            border: 1px solid #000
-        }
-
-        div.subCategory {
-            width: 90%;
-            height: auto;
-            padding: 0;
-            margin: 1em;
-            max-width: 768px;
-            float: left;
-    
-        }
-
-        img.profilBild {
-            width: 100%;
-        }
-
-
-        .skill {
-            width: 100%;
-            height: auto;
-            margin: 0em 0em 1em 0em;
-            background-color: #ddd;
-
-        }
-
-        .skill p {
-            text-align: left;
-            color: white;
-            width: 100px;
-            padding-left: 10px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            background-color: rgba(0, 0, 0, 0.3);
-
-        }
-
-        .html {
-            width: 90%;
-            background-color: #04AA6D;
-        }
-
-        .css {
-            width: 80%;
-            background-color: #2196F3;
-        }
-
-        .js {
-            width: 65%;
-            background-color: #f44336;
-        }
-
-        .sql {
-            width: 60%;
-            background-color: #808080;
-        }
-
-        .java {
-            width: 60%;
-            background-color: #804380;
-        }
-    </style>
-
-
 </head>
 
 <body>
-
-
     <!-- Ladda härifrån till Container -->
-    <div id="content" class="profil">
+    <div id="content">
 
         <div class="category">
 
             <div id="profilbildBox" class="subCategory">
-                <img src="/bilder/profil/harold.jpg" alt="namn Namnssons Profilbild" id="profilbilen"
+                <img src="bilder/profil/harold.jpg" alt="namn Namnssons Profilbild" id="profilbilen"
                     class="profilBild" />
             </div>
 
@@ -159,7 +83,7 @@
 
 
 
-    </div>
+    </div> <!-- stänger content -->
 
 </body>
 
