--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -5,18 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/projekt.css" />
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
     <title>Grupp 12 Projekt</title>
 </head>
-<body>
+<body id="body">
+
+
+
     <div id="content">
+        <script src="js/projekt.js"></script>
 
         <div class="projektSlider">
+            
             <button id="nastaProjekt">Nästa projekt</button>
-
         </div>
+
         <div class="projekt" id="projekt"></div>
 
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
-    <script src="js/projekt.js"></script>
+    </div> <!-- Stänger Content -->
+
+
+  
+    
 </body>
 </html>
