--- a/public_html/TEST_ajax_html_load.html
+++ b/public_html/TEST_ajax_html_load.html
@@ -22,6 +22,8 @@
        </nav>
    </header> 
 
+<iframe src="projekt.html"></iframe>
+
     <div id="container">
 
         <div id="content">
@@ -43,11 +45,6 @@
             $('#content').hide();
             $('#container').load(url + ' #content').hide().fadeIn(500);
         });      
-
-
-}
-
-
     </script>
 
 </body>
