--- a/public_html/TEST_ajax_html_load.html
+++ b/public_html/TEST_ajax_html_load.html
@@ -12,17 +12,19 @@
 </head>
 <body>
 
-   <header>
-       <nav style="width: 100%; height: 5vw; background-color: #DDD; margin-bottom: 5vw;">
-        <ul style="width:100%; height: 5vw; float:right; text-align: right; padding-right: 5vw;">
-            <li style="display: inline;"><a href="TEST_ajax_html_load.html" class="current">Hem</a></li>
-            <li style="display: inline;"><a href="projekt.html">Projekt</a></li>
-            <li style="display: inline;"><a href="MALLpersonligProfilSida.html">Kontakta oss</a></li>
-        </ul>
-       </nav>
-   </header> 
+    <header>
+        <nav style="width: 100%; height: 5vw; background-color: #DDD; margin-bottom: 5vw;">
+         <ul style="width:100%; height: 5vw; float:right; text-align: right; padding-right: 5vw;">
+             <li style="display: inline;"><a href="TEST_ajax_html_load.html" class="current">Hem</a></li>
+             <li style="display: inline;"><a href="projekt.html">Projekt</a></li>
+             <li style="display: inline;"><a href="MALLpersonligProfilSida.html">Kontakta oss</a></li>
+         </ul>
+        </nav>
+    </header>
 
-<iframe src="projekt.html"></iframe>
+<iframe src="/projekt.html" style="width: 100%; height: 1000px; border: 0;">
+
+</iframe>
 
     <div id="container">
 
