--- a/public_html/aboutGrp12.html
+++ b/public_html/aboutGrp12.html
@@ -23,28 +23,28 @@
     <div class="wrapper-grid">
         <div class="about-container">
             <div class="about-backgroundimg"></div>
-            <img class="about-profileimg" src="avatar.png" alt="profile image">
+            <img class="about-profileimg" src="bilder/profil/avatar.png" alt="profile image">
             <h1 class="about-name">Amira</h1>
             <h2 class="about-info">front-end developer & designer</h2>
             <button class="about-button">Read more</button>
         </div>
         <div class="about-container">
             <div class="about-backgroundimg"></div>
-            <img class="about-profileimg" src="avatar.png" alt="profile image">
+            <img class="about-profileimg" src="bilder/profil/avatar.png" alt="profile image">
             <h1 class="about-name">Edvin</h1>
             <h2 class="about-info">front-end developer & designer</h2>
             <button class="about-button">Read more</button>
         </div>
         <div class="about-container">
             <div class="about-backgroundimg"></div>
-            <img class="about-profileimg" src="avatar.png" alt="profile image">
+            <img class="about-profileimg" src="bilder/profil/avatar.png" alt="profile image">
             <h1 class="about-name">Emma</h1>
             <h2 class="about-info">front-end developer & designer</h2>
             <button class="about-button">Read more</button>
         </div>
         <div class="about-container">
             <div class="about-backgroundimg"></div>
-            <img class="about-profileimg" src="avatar.png" alt="profile image">
+            <img class="about-profileimg" src="bilder/profil/harold.jpg" alt="profile image">
             <h1 class="about-name">Payam</h1>
             <h2 class="about-info">front-end developer & designer</h2>
             <button class="about-button">Read more</button>
