--- a/public_html/TEST_ajax_html_load.html
+++ b/public_html/TEST_ajax_html_load.html
@@ -46,6 +46,8 @@
 
             $('#content').hide();
             $('#container').load(url + ' #content').hide().fadeIn(500);
+            //nedan kan vi lägga våran main javascriptfil för hela sidan
+            //Koden nedan laddar in javascript efter att nytt content har laddats in
             $('#container').append($('<script src=js/projekt.js />'));
         });      
     </script>
