--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.css">
 
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-  <!--icons-->>
+  <!--icons-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
@@ -22,7 +22,6 @@
   <!-- Start lnding page  -->
   <div class='load'>
     <div class="portfolio-sida">
-      <div class="overlay"></div>
       <!-- börjar header-area -->
       <header class="header-area">
         <div class="logo">
@@ -39,9 +38,8 @@
             </label>
             <div class="nav__menu container" id="nav-menu">
               <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+                <li class="nav__item"><a href="#feature" class="nav__link active">Feature</a></li>
                 <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                 <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
               </ul>
             </div>
@@ -68,7 +66,6 @@
       <section class="features section" id="feature">
         <div class="features__container container">
           <div class="features">
-            <div class="container">
               <div class="box">
                 <i class="fa fa-desktop"></i>
                 <h3>Network</h3>
