--- a/public_html/Emma.html
+++ b/public_html/Emma.html
@@ -5,7 +5,7 @@
     <title>Emma</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial scale=1.0">
-    <link rel="stylesheet" href="emma.css" />
+    <link rel="stylesheet" href="css/emma.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Sans+Pro:wght@300&display=swap"
@@ -15,7 +15,7 @@
 <body>
     <div class="outer-grid">
         <div class="profile">
-            <img src="avatar.png" alt="emma">
+            <img src="bilder/profil/avatar.png" alt="emma">
             <ul class="contact-list">
                 <li id="namn">Emma</li>
                 <li id="tel">070-1234567</li>
