--- a/public_html/index.html
+++ b/public_html/index.html
@@ -124,7 +124,7 @@
       <p>&#169; 2020 copyright all right reserved</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/Amira.js"></script>
   </div>
 </body>
 <!-- End portfolio-sida -->
