--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/Amira.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" />
   <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.css">
-
+<link rel="stylesheet" href="css/fonts/all.css">
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
   <!--icons-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
