--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,8 +8,6 @@
   <title>Client Project</title>
   <link rel="stylesheet" href="css/Amira.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" />
-  
-
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
   <!--icons-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -77,22 +75,22 @@
     <div class="features-a">
       <div class="container-a">
         <div class="box-a">
-          <i class="fa fa-desktop"></i>
+        <i class='bx bx-desktop'></i>
           <h3>Network</h3>
           <p>Bla Bla Bla</p>
         </div>
         <div class="box-a">
-          <i class="fa fa-clone"></i>
+          <i class='bx bxs-image'></i>
           <h3>Web Desigen</h3>
           <p>Bla Bla Bla</p>
         </div>
         <div class="box-a">
-          <i class="fas fa-comments"></i>
+         <i class='bx bxs-message-rounded-dots'></i>
           <h3>Social Media</h3>
           <p>Bla Bla Bla</p>
         </div>
         <div class="box-a">
-          <i class="fa fa-phone"></i>
+       <i class='bx bx-phone-incoming'></i>
           <h3> Service</h3>
           
           <p>Bla Bla Bla</p>
