--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- Start lnding page  -->
-  <div class='load'>
+  
     <div class="portfolio-sida-a">
       <div class="overlay-a"></div>
       <!-- börjar header-area -->
@@ -33,8 +33,8 @@
             <i class="fas fa-bars" id="btn-a"></i>
           </button>
           <ul class="links-a">
-            <li><a href="#">Project</a></li>
-            <li><a href="#">About </a></li>
+            <li><a href="#">Project </a></li>
+            <li><a href="#">About us</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
          
@@ -96,7 +96,6 @@
           <p>Bla Bla Bla</p>
         </div>
       </div>
-    </div>
     <!-- End Features -->
   
     <!-- <main class="main"> -->
