--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,7 +33,7 @@
             <i class="fas fa-bars" id="btn-a"></i>
           </button>
           <ul class="links-a">
-            <li><a href="#">Project </a></li>
+            <li><a href="#">Project</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -62,9 +62,9 @@
           <h1 id="ddr">We are <span>Creative</span> grupp</h1>
           <p id="app-a">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            voluptate quos <br />ea possimus.Lorem ipsum dolor sit amet
-            consectetur adipisicing<br />
-            elit Ratione voluptate quos ea possimus.
+            voluptate quos ea possimus.<br /> Lorem ipsum dolor sit amet
+            consectetur adipisicing
+            elit Ratione<br /> voluptate quos ea possimus.
           </p>
         </div>
       </header>
