--- a/public_html/member1.html
+++ b/public_html/member1.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-latest.js"></script> -->
   </head>
   <body>
     <div class="container">
