--- a/public_html/member2.html
+++ b/public_html/member2.html
@@ -48,7 +48,7 @@
 
       <div class="about__container container">
         <div class="about__img">
-          <img src="bilder/profil/edvin.jpg" alt="">
+          <img src="bilder/profil/aguy.jpg" alt="">
         </div>
         <div class="about__texts">
           <h2 class="about__subtitle">I am Edvin</h2>
