--- a/OLD_public_html/aboutGrp12.html
+++ b/OLD_public_html/aboutGrp12.html
@@ -5,7 +5,7 @@
     <title>About Us</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial scale=1.0">
-    <link rel="stylesheet" href="css/aboutGrp12.css" />
+    <link rel="stylesheet" href="../public_html/css/aboutGrp12.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Sans+Pro:wght@300&display=swap"
@@ -49,5 +49,8 @@
             <h2 class="about-info">front-end developer & designer</h2>
             <button class="about-button">Read more</button>
         </div>
+    </div>
+    <div class="about-footer">
+        <p>Click on us to learn more about what we do</p>
     </div>
 </body>
