--- a/public_html/kontakt.html
+++ b/public_html/kontakt.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/Amira.css" />
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
   <title>Kontakta oss</title>
 </head>
 
@@ -33,7 +35,7 @@
     </section>
 
   </div>
-
+  <script src="js/Amira.js"></script>
 </body>
 
 </html>
