--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,7 +32,8 @@
 </head>
 
 <body>
-
+ 
+  <nav>
   <div class="portfolio-sida-a">
     <div class="overlay-a"></div>
     <!-- börjar header-area -->
@@ -67,6 +68,7 @@
     </header>
     <!-- slutar header-area -->
   </div>
+</nav>
 
   <!-- Start Features -->
   <div class="features-a">
