--- a/public_html/member3.html
+++ b/public_html/member3.html
@@ -14,48 +14,51 @@
 
 <body>
     <div class="outer-grid">
-        <div class="profile">
-            <img src="bilder/profil/avatar.png" alt="emma">
-            <ul class="contact-list">
+        <div class="emma-profile">
+            <img class="emma-img"src="bilder/profil/avatar.png" alt="emma">
+            <ul class="emma-contact">
                 <li id="namn">Emma</li>
                 <li id="tel">070-1234567</li>
                 <li id="mail">emma@group12.com</li>
             </ul>
         </div>
-        <div class="about-me">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cum labore eveniet quas, itaque ipsam eum
-                inventore non minima nostrum. Sit adipisci eveniet culpa molestiae numquam esse recusandae quaerat
-                consequatur laborum, error minus quidem ex ullam voluptatibus modi sunt, corrupti tenetur consectetur
-                natus
-                ipsum earum. Facere consequuntur sint adipisci distinctio!</p>
+        <div class="emma-about">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero beatae minima quis facere maxime at excepturi provident eaque, officiis nostrum omnis, necessitatibus placeat in reprehenderit ex eligendi id! Error, deserunt?</p>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia saepe omnis maxime iure numquam.
                 Tempora, delectus nulla, provident sed consequuntur ex eligendi libero modi ad dolorem vitae
                 repudiandae? Facilis, temporibus!</p>
         </div>
 
-        <!-- placeholder för vår skillbar -->
+
         <div class="skills">
-            <p>HTML</p>
-            <div class="container">
-                <div class="skills html">90%</div>
+            
+            <div class="skill-box">
+                <div class="skill-name">Html</div>
+                <div class="skill-progress progress-red">
+                    <span data-progress="90%">90%</span>
+                </div>
             </div>
-
-            <p>CSS</p>
-            <div class="container">
-                <div class="skills css">80%</div>
+            <div class="skill-box">
+                <div class="skill-name">Css</div>
+                <div class="skill-progress progress-yellowgreen">
+                    <span data-progress="80%">80%</span>
+                </div>
             </div>
-
-            <p>JavaScript</p>
-            <div class="container">
-                <div class="skills js">65%</div>
+            <div class="skill-box">
+                <div class="skill-name">Js</div>
+                <div class="skill-progress progress-blue">
+                    <span data-progress="40%">40%</span>
+                </div>
             </div>
-
-            <p>PHP</p>
-            <div class="container">
-                <div class="skills php">60%</div>
+            <div class="skill-box">
+                <div class="skill-name">jQuery</div>
+                <div class="skill-progress progress-orchid">
+                    <span data-progress="60%">60%</span>
+                </div>
             </div>
         </div>
+
     </div>
 
 
