--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -52,6 +52,9 @@
                 <button class="about-button"><a href="member4.html">Read more</a></button>
             </div>
         </div>
+        <div class="about-footer">
+            <p>Click on us to learn more about what we do</p>
+        </div>
 
 
     </div>
