--- a/public_html/member3.html
+++ b/public_html/member3.html
@@ -31,30 +31,35 @@
         </div>
 
 
-        <div class="skills">
+        <div class="emma-skills">
             
-            <div class="skill-box">
-                <div class="skill-name">Html</div>
-                <div class="skill-progress progress-red">
-                    <span data-progress="90%">90%</span>
+            <div class="skill">
+                <div class="html">
+                    <p>HTML</p>
                 </div>
             </div>
-            <div class="skill-box">
-                <div class="skill-name">Css</div>
-                <div class="skill-progress progress-yellowgreen">
-                    <span data-progress="80%">80%</span>
+
+            <div class="skill">
+                <div class="css">
+                    <p>CSS</p>
                 </div>
             </div>
-            <div class="skill-box">
-                <div class="skill-name">Js</div>
-                <div class="skill-progress progress-blue">
-                    <span data-progress="40%">40%</span>
+
+            <div class="skill">
+                <div class="js">
+                    <p>JavaScript</p>
                 </div>
             </div>
-            <div class="skill-box">
-                <div class="skill-name">jQuery</div>
-                <div class="skill-progress progress-orchid">
-                    <span data-progress="60%">60%</span>
+
+            <div class="skill">
+                <div class="java">
+                    <p>Java</p>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="sql">
+                    <p>SQL</p>
                 </div>
             </div>
         </div>
