--- a/public_html/member3.html
+++ b/public_html/member3.html
@@ -6,10 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <link rel="stylesheet" href="css/emma.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Sans+Pro:wght@300&display=swap"
-        rel="stylesheet">
+  
 </head>
 
 <body>
@@ -23,6 +20,8 @@
             </ul>
         </div>
         <div class="emma-about">
+            <h2>Who am I</h2>
+            <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero beatae minima quis facere maxime at excepturi provident eaque, officiis nostrum omnis, necessitatibus placeat in reprehenderit ex eligendi id! Error, deserunt?</p>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia saepe omnis maxime iure numquam.
