--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -17,10 +17,7 @@
 
         <div class="about-mainext">
             <h1>Hi, we are the members</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus omnis perferendis molestiae, est mollitia
-                repellat saepe sequi ipsum neque vero aperiam accusamus id? Inventore deserunt est laboriosam mollitia saepe
-                id repudiandae doloremque asperiores! Eveniet earum temporibus omnis fugit veritatis! Voluptatem cum impedit
-                qui minima neque hic facere non dolores ratione.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere molestias inventore ab, temporibus quod sit earum animi necessitatibus similique at debitis ipsam rerum illum consequatur soluta dolorem sunt dolore. Placeat?</p>
         </div>
         <div class="wrapper-grid">
             <div class="about-container">
@@ -53,7 +50,7 @@
             </div>
         </div>
         <div class="about-footer">
-            <p>Click on us to learn more about what we do</p>
+            <p>Click to learn more about what we do</p>
         </div>
 
 
