--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,9 +10,8 @@
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 
   <!-- från Amiras amira.html-->
-  <link rel="stylesheet" href="css/Amira.css" />
-  <link rel="stylesheet" href="css/master.css" />
-  <link rel="stylesheet" href="css/normalize.css" />
+   <!-- <link rel="stylesheet" href="css/master.css" /> -->
+  <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
