--- a/public_html/member3.html
+++ b/public_html/member3.html
@@ -20,7 +20,7 @@
             </ul>
         </div>
         <div class="emma-about">
-            <h2>Who am I</h2>
+            <h2>Who am I?</h2>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero beatae minima quis facere maxime at excepturi provident eaque, officiis nostrum omnis, necessitatibus placeat in reprehenderit ex eligendi id! Error, deserunt?</p>
             <br>
@@ -31,7 +31,7 @@
 
 
         <div class="emma-skills">
-            
+            <h2>My skills</h2>
             <div class="skill">
                 <div class="html">
                     <p>HTML</p>
