--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -22,14 +22,14 @@
         <div class="wrapper-grid">
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
-                <img class="about-profileimg" src="bilder/index-images/largg.jpg" alt="profile image">
+                <img class="about-profileimg" src="bilder/profil/member1.jpg" alt="profile image">
                 <h1 class="about-name">Amira</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
                 <button class="about-button"><a href="member1.html">Read more</a></button>
             </div>
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
-                <img class="about-profileimg" src="bilder/profil/aguy.jpg" alt="profile image">
+                <img class="about-profileimg" src="bilder/profil/member2.jpg" alt="profile image">
                 <h1 class="about-name">Edvin</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
                 <button class="about-button"><a href="member2.html">Read more</a></button>
