--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -25,28 +25,28 @@
                 <img class="about-profileimg" src="bilder/profil/member1.jpg" alt="profile image">
                 <h1 class="about-name">Amira</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member1.html">Read more</a></button>
+                <button class="about-button"><a href="member1.html" target="_blank">Read more</a></button>
             </div>
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
                 <img class="about-profileimg" src="bilder/profil/member2.jpg" alt="profile image">
                 <h1 class="about-name">Edvin</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member2.html">Read more</a></button>
+                <button class="about-button"><a href="member2.html" target="_blank">Read more</a></button>
             </div>
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
                 <img class="about-profileimg" src="bilder/profil/avatar.png" alt="profile image">
                 <h1 class="about-name">Emma</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member3.html">Read more</a></button>
+                <button class="about-button"><a href="member3.html" target="_blank">Read more</a></button>
             </div>
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
                 <img class="about-profileimg" src="bilder/profil/harold.jpg" alt="profile image">
                 <h1 class="about-name">Payam</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member4.html">Read more</a></button>
+                <button class="about-button"><a href="member4.html" target="_blank">Read more</a></button>
             </div>
         </div>
         <div class="about-footer">
