--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -21,7 +21,7 @@
             <p>Klicka på knappen för att läsa om våra projekt</p>
             <p></p>
             </div>
-            <button id="nastaProjekt">Nästa projektet</button>
+            <button class="nastaProjekt" id="nastaProjekt">Nästa projektet</button>
      
         </div>
 
