--- a/public_html/projekt.html
+++ b/public_html/projekt.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-   
     <title>Grupp 12 Projekt</title>
 </head>
+
 <body id="body">
  
     <div id="content">
+        <style>
 
+            button.nastaProjekt {
+                background-color: bisque;
+                border:1px solid #000;
+                width: 100%;
+                height: 2.5em;
+        
+            }
+        
+        </style>
 
         <div class="projektSlider">
 
