--- a/public_html/start.html
+++ b/public_html/start.html
@@ -14,8 +14,10 @@
 
     <!-- Start lnding page  -->
 
-      <div class="portfolio-sida">
-
+  
+        <div class="portfolio-sida-a">
+          <div class="overlay-a"></div>
+        
           <div class="introduction-text">
             <h1 id="ddr">We are <span>Creative</span> grupp</h1>
             <p id="app">
@@ -25,9 +27,7 @@
               elit Ratione voluptate quos ea possimus.
             </p>
           </div>
-  
-      </div>
-
+        </div>
 
 
 
