--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,7 +49,7 @@
             <li class="nav__item"><a href="start.html" id="startLink" class="nav__link active">Start</a></li>
             <li class="nav__item"><a href="projekt.html" id="projektLink" class="nav__link">Projekten</a></li>
             <li class="nav__item"><a href="om_oss.html" id="omOssLink" class="nav__link">Om Oss</a></li>
-            <li class="nav__item"><a href="kontakt.html" id="kontaktLink" class="nav__link">Kontakt</a></li>
+            <li class="nav__item"><a href="kontakt.html" id="kontaktLink" class="nav__link" >Kontakt</a></li>
           </ul>
         </div>
       </nav>
@@ -150,10 +150,9 @@
           break;
 
         case 'kontaktLink':
-
-          console.log("lägger till projekt js");
-          $('#content').append($('<script src=js/appEd.js />'));
-          $('#content').append($('<script src=js/Amira.js />'));
+        
+          // $('#content').append($('<script src=js/appEd.js />'));
+          // $('#content').append($('<script src=js/Amira.js />'));
 
           break;
 
