--- a/public_html/member1.html
+++ b/public_html/member1.html
@@ -20,11 +20,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-latest.js"></script> -->
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
     <div class="container">
-     
         <div class="header">
           <h1>My personal page</h1>
         </div>
@@ -48,7 +47,9 @@
             inventore.
           </p>
         </div>
+     
       <!-- start our skills -->
+
         <div class="skills">
           <h2>Our Skills</h2>
           <div class="skill-box">
