--- a/public_html/index.html
+++ b/public_html/index.html
@@ -35,24 +35,23 @@
 
   <header class="header-area-a">
 
- <nav>
-  <div class="logo-a">
-    <span>C&S</span> <br />
-    Client Service
-  </div>
-        <div class="container-a">
-          <button>
-            <i class="fas fa-bars" id="btn-a"></i>
-          </button>
-      
-          <ul class="links-a">
-            <li class="nav__item"><a href="start.html" id="startLink" class="nav__link active">Start</a></li>
-            <li class="nav__item"><a href="projekt.html" id="projektLink" class="nav__link">Projekten</a></li>
-            <li class="nav__item"><a href="om_oss.html" id="omOssLink" class="nav__link">Om Oss</a></li>
-            <li class="nav__item"><a href="kontakt.html" id="kontaktLink" class="nav__link" >Kontakt</a></li>
-          </ul>
+    <nav class="nav">
+      <label class="nav__logo">Edvin</label>
+      <label class="nav__toggle" id="nav-toggle">
+        <div class="color__box">
+          <i class='bx bx-menu'></i>
         </div>
-      </nav>
+      </label>
+      <div class="nav__menu container" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+        </ul>
+      </div>
+
+    </nav>
     
   </header>
   <!-- slutar header-area -->
