--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,6 +9,8 @@
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 
+  <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+
   <!-- från Amiras amira.html-->
    <!-- <link rel="stylesheet" href="css/master.css" /> -->
   <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
@@ -36,7 +38,7 @@
   <header class="header-area-a">
 
     <nav class="nav">
-      <label class="nav__logo">Edvin</label>
+      <label class="nav__logo">Grupp 12</label>
       <label class="nav__toggle" id="nav-toggle">
         <div class="color__box">
           <i class='bx bx-menu'></i>
@@ -44,10 +46,10 @@
       </label>
       <div class="nav__menu container" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+          <li class="nav__item"><a href="start.html" id="startLink" class="nav__link active">Home</a></li>
+          <li class="nav__item"><a href="om_oss.html" id="omOssLink" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="projekt.html" id="projektLink" class="nav__link">Skills</a></li>
+          <li class="nav__item"><a href="kontakt.html" id="kontaktLink" class="nav__link">Contact</a></li>
         </ul>
       </div>
 
