--- a/public_html/member1.html
+++ b/public_html/member1.html
@@ -41,9 +41,7 @@
           laudantium dolorum labore, asperiores fugiat ratione totam vero
           laborum consequuntur possimus explicabo commodi, vitae voluptatem
           dolor magnam inventore numquam assumenda. Lorem ipsum dolor sit, amet
-          consectetur adipisicing elit. Magnam sed repellat, atque nam harum
-          porro quis laborum corporis recusandae facilis corrupti nihil deleniti
-          veritatis dolore tenetur tempora assumenda beatae inventore.
+          consectetur adipisicing elit. 
         </p>
       </div>
 
