--- a/public_html/index.html
+++ b/public_html/index.html
@@ -44,7 +44,7 @@
           <i class='bx bx-menu'></i>
         </div>
       </label>
-      <div class="nav__menu container" id="nav-menu">
+      <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item"><a href="start.html" id="startLink" class="nav__link active">Home</a></li>
           <li class="nav__item"><a href="om_oss.html" id="omOssLink" class="nav__link">About</a></li>
@@ -164,7 +164,7 @@
 
     });
   </script>
-
+<script src="js/Amira.js"></script>
 </body>
 
 </html>
