--- a/public_html/member1.html
+++ b/public_html/member1.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1>My personal page</h1>
+        <h1> My Personal page</h1>
       </div>
       <div class="image"></div>
       <div class="list">
