--- a/public_html/index.html
+++ b/public_html/index.html
@@ -106,9 +106,7 @@
   </footer>
   <!--===== FOOTER =====-->
 
-
-
-<script src="js/Amira.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
