--- a/public_html/kontakt.html
+++ b/public_html/kontakt.html
@@ -30,10 +30,15 @@
             <div class="error hide">Message is required and <br> must be longer than 3 letters</div>
 
             <button type="submit" class="contact__button">Send</button>
+            </form>
         </div>
       </div>
     </section>
-  </div>
+
+
+  </div> <!-- Stänger content -->
+
+
 </body>
 
 </html>
