--- a/public_html/member2.html
+++ b/public_html/member2.html
@@ -17,9 +17,9 @@
     <nav class="nav">
       <label class="nav__logo">Edvin</label>
       <label class="nav__toggle" id="nav-toggle">
-        <div class="color__box">
+        <!-- <div class="color__box"> -->
           <i class='bx bx-menu'></i>
-        </div>
+        <!-- </div> -->
       </label>
       <div class="nav__menu container" id="nav-menu">
         <ul class="nav__list">
@@ -100,6 +100,7 @@
 
           </div>
         </div>
+        </div>
     </section>
 
     <section class="contact section" id="contact">
@@ -117,6 +118,7 @@
             <div class="error hide">Message is required and <br> must be longer than 3 letters</div>
             
             <button type="submit" class="contact__button">Send</button>
+            </form>
         </div>
       </div>
     </section>
