group istället för grupp

--- a/public_html/start.html
+++ b/public_html/start.html
@@ -18,7 +18,7 @@
         <div class="portfolio-sida-a">
                  
           <div class="introduction-text">
-            <h1 id="ddr">We are <span>Creative</span> grupp</h1>
+            <h1 id="ddr">We are <span>Creative</span> group</h1>
             <p id="app">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
               voluptate quos <br />ea possimus.Lorem ipsum dolor sit amet
