--- a/public_html/start.html
+++ b/public_html/start.html
@@ -23,8 +23,8 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
               voluptate quos <br />ea possimus.Lorem ipsum dolor sit amet
               consectetur adipisicing<br />
-              elit Ratione voluptate quos ea possimus.
-            </p>
+              elit Ratione voluptate quos ea possimus.</p>
+              <button id="startStop" class="theButton">Pause the animation</button>
           </div>
         </div>
 
