--- a/public_html/start.html
+++ b/public_html/start.html
@@ -24,7 +24,7 @@
               voluptate quos <br />ea possimus.Lorem ipsum dolor sit amet
               consectetur adipisicing<br />
               elit Ratione voluptate quos ea possimus.</p>
-              <button id="startStop" class="theButton">Pause the animation</button>
+              <button id="animationPause" class="theButton">Starta - Stoppa animationen</button>
           </div>
         </div>
 
