--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,13 +12,16 @@
         rel="stylesheet">
     <title>Om Oss</title>
 </head>
+
 <body>
 
     <div id="content">
 
         <div class="about-mainext">
             <h1>Hi, we are the members</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere molestias inventore ab, temporibus quod sit earum animi necessitatibus similique at debitis ipsam rerum illum consequatur soluta dolorem sunt dolore. Placeat?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere molestias inventore ab, temporibus quod
+                sit earum animi necessitatibus similique at debitis ipsam rerum illum consequatur soluta dolorem sunt
+                dolore. Placeat?</p>
         </div>
         <div class="wrapper-grid">
             <div class="about-container">
@@ -25,28 +29,36 @@
                 <img class="about-profileimg" src="bilder/profil/member1.jpg" alt="profile image">
                 <h1 class="about-name">Amira</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member1.html" target="_blank">Read more</a></button>
+                <div class="about-button">
+                    <a href="member1.html" target="_blank">Read more</a>
+                </div>
             </div>
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
                 <img class="about-profileimg" src="bilder/profil/member2.jpg" alt="profile image">
                 <h1 class="about-name">Edvin</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member2.html" target="_blank">Read more</a></button>
+                <div class="about-button">
+                    <a href="member2.html" target="_blank">Read more</a>
+                </div>
             </div>
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
                 <img class="about-profileimg" src="bilder/profil/avatar.png" alt="profile image">
                 <h1 class="about-name">Emma</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member3.html" target="_blank">Read more</a></button>
+                <div class="about-button">
+                    <a href="member3.html" target="_blank">Read more</a>
+                </div>
             </div>
             <div class="about-container">
                 <div class="about-backgroundimg"></div>
                 <img class="about-profileimg" src="bilder/profil/harold.jpg" alt="profile image">
                 <h1 class="about-name">Payam</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
-                <button class="about-button"><a href="member4.html" target="_blank">Read more</a></button>
+                <div class="about-button">
+                    <a href="member4.html" target="_blank">Read more</a>
+                </div>
             </div>
         </div>
         <div class="about-footer">
@@ -55,6 +67,7 @@
 
 
     </div>
-    
+
 </body>
+
 </html>
