--- a/public_html/member3.html
+++ b/public_html/member3.html
@@ -31,7 +31,7 @@
 
 
         <div class="emma-skills">
-            <h2>My skills</h2>
+            <h2 id="mySkills">My skills</h2>
             <div class="skill">
                 <div class="html">
                     <p>HTML</p>
