--- a/public_html/start.html
+++ b/public_html/start.html
@@ -18,19 +18,25 @@
         <div class="portfolio-sida-a">
                  
           <div class="introduction-text">
-            <h1 id="ddr">We are <span>Creative</span> group</h1>
-            <p id="app">
+            <h1>We are <span>Creative</span> group</h1>
+            <p id="p-toggle">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
               voluptate quos <br />ea possimus.Lorem ipsum dolor sit amet
               consectetur adipisicing<br />
               elit Ratione voluptate quos ea possimus.</p>
-              <button id="animationPause" class="theButton">Starta - Stoppa animationen</button>
+              <br/>
+              <div class='random-background'>
+              <h4>Backgroung Options</h4>
+              <button id="animationAction" data-background='yes'>Starta </button>
+              <button id="animationPause" data-background="No">Stoppa </button>
+              </div>
           </div>
         </div>
 
 
 
   </div> <!-- Stänger content -->
+ 
 
 </body>
 </html>
