--- a/public_html/start.html
+++ b/public_html/start.html
@@ -27,8 +27,8 @@
               <br/>
               <div class='random-background'>
               <h4>Backgroung Options</h4>
-              <button id="animationAction" data-background='yes'>Starta </button>
-              <button id="animationPause" data-background="No">Stoppa </button>
+              <button class="animationAction" data-background='yes'>Starta </button>
+              <button class="animationPause" data-background="No">Stoppa </button>
               </div>
           </div>
         </div>
